# FaceRecognition

./: CMakeLists.txt  README.md  conanfile.txt  main.cpp
face_detector/: CMakeLists.txt  config.h.in
face_detector/include/: config.h  face_detector.hpp
face_detector/src/: face_detector.cpp
face_detector/test/: CMakeLists.txt  face_detector_test.cpp
include/: image_wrapper.hpp  json_writer.hpp
src/: image_wrapper.cpp  json_writer.cpp
